Fixed header alignment and footer font size.

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,6 +62,7 @@ html body {
 
 footer {
 	text-decoration: none;
+  font-size: 12px;
 	a {
 		color: white;
 		font-family: $font-primary;
