--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,7 @@ footer {
 		flex-direction: column;
 		gap: 0.5rem;
 		height: 13rem;
-        margin-left: 5rem;
+        margin-left: 2rem;
 	}
 	i {
 		margin-right: 0.75rem;
